--- a/BlankProcess3/.local/install/BlankProcess3.Mapper.json
+++ b/BlankProcess3/.local/install/BlankProcess3.Mapper.json
@@ -1,1 +1,1 @@
-["C:\\Users\\msomondi\\OneDrive - SAFARICOM PLC\\Documents\\UiPath\\BlankProcess3\\Main.xaml"]
+["C:\\Users\\msomondi\\OneDrive - SAFARICOM PLC\\Documents\\UiPath\\uipath - RPA\\BlankProcess3\\Main.xaml"]
