--- a/challenge2/.local/install/challenge2.Mapper.json
+++ b/challenge2/.local/install/challenge2.Mapper.json
@@ -1,1 +1,1 @@
-["C:\\Users\\msomondi\\OneDrive - SAFARICOM PLC\\Documents\\UiPath\\challenge2\\Main.xaml"]
+["C:\\Users\\msomondi\\OneDrive - SAFARICOM PLC\\Documents\\UiPath\\uipath - RPA\\challenge2\\Main.xaml"]
